--- a/components/profile/ProfileView.module.scss
+++ b/components/profile/ProfileView.module.scss
@@ -476,6 +476,7 @@
   display: flex;
   gap: 6px;
   flex-wrap: wrap;
+  margin-top: 6px;
 }
 
 .levelBtn {
